# cpp-physics-sandbox

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  imgui.ini  index.html  sandbox.html  sandbox.js  sandbox.wasm  style.css
.github/workflows/: ci.yml
assets/audio/original/: explosion.rfx  hit.sfxr  shoot.sfxr  shoot2.sfxr  spawn.rfx
assets/shaders/: all.fs  background.fs  particles.fs  stars.fs
lib/: CMakeLists.txt
scripts/: assets.sh  build.sh  clean.sh  copy-web-artifacts.sh  debug.sh  linter.sh  release.sh  server.sh  web.sh
src/: app.cpp  app.hpp  constants.hpp  main.cpp  object.cpp  object.hpp  precomp.hpp  quadtree.cpp  quadtree.hpp  quadtree_dummy.cpp  quadtree_grid.cpp  solver.cpp  solver.hpp  spawner.cpp  spawner.hpp
src/core/: app.cpp  app.hpp  constants.hpp  gui_style.hpp  interation_handler.cpp  interation_handler.hpp  main.cpp  object.cpp  palette.hpp  precomp.hpp  quadtree.cpp  quadtree_dummy.cpp  quadtree_grid.cpp  settings.cpp  settings.hpp  solver.cpp  spawner.cpp  spawner.hpp  utils.hpp
src/core/data/: dummy-list.cpp  dummy-list.hpp  icontainer.hpp  spatial-hash-grid.cpp  spatial-hash-grid.hpp
src/core/interface/: gui.cpp  palette.hpp
src/core/models/: app.cpp  app.hpp  asteroid.cpp  asteroid.hpp  bullet.cpp  bullet.hpp  collision-handler.hpp  collision-hanlder.cpp  gui.cpp  hotreload-shader.cpp  hotreload-shader.hpp  interation_handler.cpp  interation_handler.hpp  object.cpp  object.hpp  particle.cpp  particle.hpp  polygon.cpp  polygon.hpp  profiler.hpp  quadtree.cpp  quadtree.hpp  quadtree_dummy.cpp  quadtree_grid.cpp  ship.cpp  ship.hpp  solver.cpp  solver.hpp  soundfx.hpp  star.hpp  wave.cpp  wave.hpp
src/web/: fire.js  index.html  script.js  style.css
